log
Thu 21 Apr 2022 09:26:37 PM UTC: 
 tests:  1|8
total_score: 0/70
861bc8e
Fri 22 Apr 2022 03:13:38 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
34161b7
Fri 22 Apr 2022 03:14:03 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b99b9a3
Fri 22 Apr 2022 03:28:42 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:12: error: comparison of distinct pointer types lacks a cast [-Werror]
   82 |     if(key < tree->current){
      |            ^
treemap.c:89:14: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   89 |   return tree->current;
      |          ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e46b43d
Fri 22 Apr 2022 03:34:11 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
e94e6d6
Fri 22 Apr 2022 03:34:59 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4be5fe3
Fri 22 Apr 2022 03:36:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d2be48f
Fri 22 Apr 2022 03:40:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:40: error: expected ‘)’ before ‘{’ token
   79 |     if(is_equal(tree,key,tree->current){
      |       ~                                ^
      |                                        )
treemap.c:87:3: error: expected expression before ‘}’ token
   87 |   }
      |   ^
Compilation failed
2e96175
Fri 22 Apr 2022 03:41:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
50f7082
Fri 22 Apr 2022 03:42:08 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
eb07f4d
Fri 22 Apr 2022 03:42:40 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:5: error: expected ‘,’ or ‘;’ before ‘if’
   84 |     if(v==1){
      |     ^~
treemap.c:86:6: error: ‘else’ without a previous ‘if’
   86 |     }else{
      |      ^~~~
treemap.c:83:9: error: unused variable ‘v’ [-Werror=unused-variable]
   83 |     int v=tree->lower_than(key,tree->current)
      |         ^
cc1: all warnings being treated as errors
Compilation failed
68060bb
Fri 22 Apr 2022 03:43:35 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:5: error: expected ‘,’ or ‘;’ before ‘if’
   84 |     if(ama==1){
      |     ^~
treemap.c:86:6: error: ‘else’ without a previous ‘if’
   86 |     }else{
      |      ^~~~
treemap.c:83:9: error: unused variable ‘ama’ [-Werror=unused-variable]
   83 |     int ama = tree->lower_than(key,tree->current)
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
9a5aa80
